Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118510

Errors when building Qt with FFMpeg/vaapi on Ubuntu 20.04

    XMLWordPrintable

Details

    • Linux/X11
    • f24e2a4d7 (dev), 57a0c3d56 (6.6), 36164122b (tqtc/lts-6.5)

    Description

      Since we moved from Qt 6.5.2 to 6.5.3 Qt no longer builds with FFmpeg/vaapi on Ubuntu 20.04. Ubuntu 22.04 is OK. I'm assuming this is because of the difference in versions of libva on these distros (v2.7 and v2.14 respectively).

      There are a bunch of errors like this:

      In file included from /home/martinb/workspace/qt6_local_build/src/qt6/qtmultimedia/src/plugins/multimedia/ffmpeg/qffmpegvaapisymbols.cpp:6:
      /home/martinb/workspace/qt6_local_build/src/qt6/qtmultimedia/src/plugins/multimedia/ffmpeg/qffmpegvaapisymbols.cpp:82:13: error: ‘vaSyncBuffer’ was not declared in this scope; did you mean ‘vaMapBuffer’?
      82 | DEFINE_FUNC(vaSyncBuffer, 3, VA_STATUS_ERROR_OPERATION_FAILED);
         |             ^~~~~~~~~~~~

       

      We don't necessarily need vaapi so for us the workaround is to disable vaapi ie. --disable-vaapi when building FFmpeg and -no-feature-vaapi when building Qt.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artemiy Artem Dyomin
            martinburchell Martin Burchell
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes