Fix build with vaapi versions < 1.9.0

The function vaSyncBuffer was introduced in 1.9.0.

Task-number: QTBUG-118510
Pick-to: 6.6 6.5
Change-Id: Icebabc981de1fa5e1738d092479686221da07987
Reviewed-by: Lars Knoll <lars@knoll.priv.no>